--- a/css/initial.css
+++ b/css/initial.css
@@ -547,8 +547,11 @@ article {
     --text-alignment: left;
     --text-hyphenation: none;
 
-    border: 1px solid var(--GW-TOC-border-color);
-    background-color: var(--GW-TOC-background-color);
+	--background-color: var(--GW-TOC-background-color);
+	--border-color: var(--GW-TOC-border-color);
+
+    border: 1px solid var(--border-color);
+    background-color: var(--background-color);
     font-family: var(--GW-sans-serif-font-stack);
     line-height: 1.25;
 }
@@ -1881,6 +1884,8 @@ a code {
 .icon-eye-slash-solid,
 .icon-manicule-left,
 .icon-manicule-right {
+    --link-underline-background-color: var(--background-color);
+
     position: relative;
     top: 0.05em;
     background-color: var(--link-underline-background-color);
