Fix CSS bug with dark mode inline icons

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -947,9 +947,16 @@ a[data-link-icon-color]:hover .link-icon-hook::after {
  */
 .has-recently-modified-icon .recently-modified-icon-hook::before,
 .icon-single-white-star-on-black-circle::before,
-.manicule, .icon-manicule-right, .icon-manicule-left,
-.icon-moon-solid, .icon-book-open-solid, .icon-message-slash-solid,
-.icon-magnifying-glass, .icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid {
+.manicule svg,
+.icon-manicule-right::before,
+.icon-manicule-left::before,
+.icon-moon-solid::before,
+.icon-book-open-solid::before,
+.icon-message-slash-solid::before,
+.icon-magnifying-glass::before,
+.icon-gear-solid::before,
+.icon-sun-solid::before,
+.icon-eye-slash-solid::before {
     filter: invert(1);
 }
 
@@ -968,5 +975,5 @@ a[data-link-icon-color]:hover .link-icon-hook::after {
 }
 </style>
 <link rel="stylesheet" href="/static/css/head.css?v=1732735241">
-<script src="/static/js/head.js?v=1732735241"></script>
+<script src="/static/js/head.js?v=1732740608"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1732667047" as="image">
