--- a/css/default.css
+++ b/css/default.css
@@ -3211,6 +3211,10 @@ blockquote .TOC,
     margin: 0 0.5em 0 0;
 }
 
+.wikipedia-entry .heading {
+	pointer-events: auto;
+}
+
 /*=--------=*/
 /*= TWEETS =*/
 /*=--------=*/
