--- a/template/include/wikipedia-entry-blockquote-not.tmpl
+++ b/template/include/wikipedia-entry-blockquote-not.tmpl
@@ -2,15 +2,6 @@
 	<[IF thumbnailFigure]>
 	<{thumbnailFigure}>
 	<[IFEND]>
-	<p class="data-field title">
-		<a 
-		   class="<{titleLinkClass}>"
-		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
-		   href="<{titleLinkHref}>"
-		   target="<{linkTarget}>"
-		   <{titleLinkDataAttributes}>
-		   <{titleLinkIconMetadata}>
-			   ><{title}></a>
-	</p>
+	<p class="data-field title"><{titleLine}></p>
 	<div class="data-field entry-content"><{entryContent}></div>
 </div>
