--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4361,6 +4361,12 @@ blockquote .TOC,
 	pointer-events: auto;
 }
 
+.wikipedia-entry.wikipedia-section .TOC {
+	clear: none;
+	width: unset;
+	display: flow-root;
+}
+
 /*=--------=*/
 /*= TWEETS =*/
 /*=--------=*/
