--- a/css/dark-mode-GENERATED.css
+++ b/css/dark-mode-GENERATED.css
@@ -344,24 +344,6 @@
      */
     --GW-body-text-color: #f1f1f1;
 
-    /*  Wikipedia math images assume a white background; transparent images
-        don’t look right if that assumption is violated.
-
-        NOTE: This color value is --GW-body-background-color with the CSS
-        `invert(1)` filter applied. If you modify --GW-body-background-color,
-        modify this also!
-     */
-    --GW-wikipedia-math-image-background-color: #e9e9e9;
-
-    /*  Wikipedia images in figures likewise assume a white background, but
-        might be transparent (and don’t get inverted).
-     */
-    --GW-wikipedia-image-background-color: #fff;
-
-    /*  Similar to the above, but for all SVGs, which don’t get inverted.
-     */
-    --GW-transparent-svg-background-color: #fff;
-
     --GW-popups-popup-title-bar-pattern: var(--GW-image-pattern-dotted-161616-on-252525-2x-gif);
     --GW-popups-popup-title-bar-pattern-focused: var(--GW-image-pattern-dotted-161616-on-3e3e3e-2x-gif);
 
@@ -371,24 +353,6 @@
 
     --GW-checkerboard-scrollbar-background-image: var(--GW-image-checkerboard-888-000-2x-gif);
     --GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-bfbfbf-000-2x-gif);
-}
-
-/*  Some SVGs used in annotations/essays
-    (eg. /doc/genetics/selection/artificial//2023-meyer-figure1-moralacceptabilityandpersonalwillingnesstouseembryoselectionorgeneticeditinginausapopulationsurvey.svg )
-    were authored as transparent SVGs, assuming a *white* background. In dark
-    mode, with a black background set, they are illegible.
-
-    So, in dark mode only, impose a white background on SVGs in <figure>s.
-    (This is scoped narrowly to only apply to SVGs which are displayed in
-    <figure>, and not SVGs elsewhere—because SVGs elsewhere are probably part
-    of the site design, and will have been designed to work with dark mode;
-    forcing a white background on them may have unpredictable bad effects. If
-    it turns out that this is still too broad, we may have to instead manually
-    edit SVGs to force a white background, or selectively whitelist them for a
-    white background.)
- */
-figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
-    background-color: var(--GW-transparent-svg-background-color);
 }
 
 /*  Audio elements don’t change color in dark mode, so their hover styles need
@@ -493,6 +457,12 @@ table th.tablesorter-headerDesc {
     background-image: url('/static/img/tablesorter/tablesorter-desc-dark.gif');
 }
 
+/*  Image backdrop.
+ */
+figure .image-wrapper.dark-mode-invert-before::before {
+    filter: invert(1);
+}
+
 /*  Images that are marked as '.invert' by the server are inverted,
     hue-rotated, and desaturated. Other (non-invertible) images are merely
     desaturated. Hovering over an image restores it to its original state.
@@ -520,10 +490,6 @@ img:not(.drop-filter-on-hover-not):not(.invert):not(.invert-auto):hover {
     transition: filter 0s ease 0.25s;
 }
 
-img[src$=".svg"].invert,
-img[src$=".svg"].invert-auto {
-    background-color: transparent;
-}
 img[src$=".svg"].invert:hover,
 img[src$=".svg"].invert-auto:hover {
     filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
@@ -620,14 +586,7 @@ a[data-link-icon-color]:hover .link-icon-hook::after {
 
 /*  Math in Wikipedia pop-frames.
  */
-.wikipedia-entry .wikipedia-math-block-wrapper img,
-.wikipedia-entry .wikipedia-math-inline-wrapper img {
+.wikipedia-entry .wikipedia-math-wrapper img {
     filter: invert(1);
-    background-color: var(--GW-wikipedia-math-image-background-color);
 }
 
-/*  Images in figures in Wikipedia pop-frames.
- */
-.wikipedia-entry figure img {
-    background-color: var(--GW-wikipedia-image-background-color);
-}
