--- a/css/default.css
+++ b/css/default.css
@@ -1183,6 +1183,8 @@ figure .image-wrapper {
 }
 
 figure .image-wrapper::before {
+	--dark-mode-invert-filter: invert(1);
+
 	content: "";
 	position: absolute;
 	left: 0;
@@ -3192,7 +3194,14 @@ blockquote .TOC,
     text-align: center;
 }
 
-/*  Special case for inline math in Wikipedia pop-frames.
+/*  Special case for math in Wikipedia pop-frames.
+ */
+.wikipedia-entry .wikipedia-math-wrapper img {
+	--dark-mode-invert-filter: invert(1);
+
+    display: block;
+}
+/*	Inline math.
  */
 .wikipedia-entry .wikipedia-math-inline-wrapper {
     display: inline-block;
@@ -3200,16 +3209,12 @@ blockquote .TOC,
     position: relative;
     bottom: -0.35em;
 }
-.wikipedia-entry .wikipedia-math-inline-wrapper img {
-    display: block;
-}
-/*  Ditto, but block math.
+/*  Block math.
  */
 .wikipedia-entry .wikipedia-math-block-wrapper {
     margin: 1em 0;
 }
 .wikipedia-entry .wikipedia-math-block-wrapper img {
-    display: block;
     margin: auto;
 }
 
@@ -3389,6 +3394,8 @@ ol.link-bibliography-list-compact > li::before {
 
 #x-of-the-day::before,
 #x-of-the-day::after {
+	--dark-mode-invert-filter: invert(1);
+
     content: "";
     position: absolute;
     left: 0.5rem;
@@ -3513,6 +3520,13 @@ ol.link-bibliography-list-compact > li::before {
 /* BOTTOM DECORATION */
 /*********************/
 
+/*  Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’,
+    similar to the arabesque navbar.
+
+    Footers help denote “this is the end”, and avoid the somewhat lame effect of
+    just having the anonymous feedback link at the end of the page and ending
+    there with nothing else.
+ */
 #footer-decoration-container {
     margin: 2rem 0 0 0;
     line-height: 0;
@@ -3555,6 +3569,8 @@ ol.link-bibliography-list-compact > li::before {
     background-color: var(--GW-body-background-color);
 }
 #footer-decoration-container .footer-logo::after {
+	--dark-mode-invert-filter: invert(1);
+
     background-image: url('/static/img/logo/logo-smooth.svg');
     background-size: contain;
     background-position: center;
@@ -6835,6 +6851,8 @@ a.include-loading.include-spinner {
 /*  Loading spinner.
  */
 a.include-loading.include-spinner::after {
+	--dark-mode-invert-filter: invert(1);
+
     display: inline-block;
     animation: fa-spin 2s infinite linear;
     position: relative;
